--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,18 +2,27 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
-    android:id="@+id/constraintLayout"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/buttonToastMe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="Toast me"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/buttonSnackMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Snack me"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Toast me"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonToastMe" />
 
 </android.support.constraint.ConstraintLayout>
