--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,4 +73,14 @@
             app:layout_constraintRight_toRightOf="parent" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonProgress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Progress"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayourSpinner" />
+
+
 </android.support.constraint.ConstraintLayout>
