--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
-    tools:context=".MainActivity">
+    tools:context=".views.MainActivity">
 
     <Button
         android:id="@+id/buttonToastMe"
